--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -133,18 +133,18 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/app-1.jpg" alt="">
+                  <img src="assets/img/portfolio/food-app.png" alt="">
                 </div>
 
-                <div class="swiper-slide">
+                <div style="display:none" class="swiper-slide">
                   <img src="assets/img/portfolio/product-1.jpg" alt="">
                 </div>
 
-                <div class="swiper-slide">
+                <div style="display:none" class="swiper-slide">
                   <img src="assets/img/portfolio/branding-1.jpg" alt="">
                 </div>
 
-                <div class="swiper-slide">
+                <div style="display:none" class="swiper-slide">
                   <img src="assets/img/portfolio/books-1.jpg" alt="">
                 </div>
 
@@ -158,16 +158,14 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Client</strong>: Demo</li>
+                <li><strong>Project date</strong>: 20 July, 2024</li>
+                <li><strong>Project URL</strong>: <a href="https://jugalsahu10.github.io/food-webapp">jugalsahu10.github.io/food-webapp</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Exercitationem repudiandae officiis neque suscipit</h2>
-              <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-              </p>
+              <h2>Food Order App</h2>
+              <p>App allows users to browse different meals, add those meals to cart, edit those meals in the cart, and proceed to a checkout form where they can then finally, submit that order to backend.</p>
             </div>
           </div>
 
