--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                     <div class="progress">
                         <span class="skill"><span>HTML, CSS, JavaScript</span> <i class="val">90%</i></span>
                         <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0"
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
                                  aria-valuemax="100"></div>
                         </div>
                     </div><!-- End Skills Item -->
@@ -316,7 +316,7 @@
                 <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
                     <h3 class="resume-title">Professional Experience</h3>
                     <div class="resume-item">
-                        <h4>Full-Stack Developer @ Self-Employed</h4>
+                        <h4>Java Full-Stack Freelance Developer @ Startup</h4>
                         <h5>Jun 2024 - Present</h5>
                         <p><em>Remote</em></p>
                         <ul>
