--- a/index.html
+++ b/index.html
@@ -411,14 +411,29 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
                         <div class="portfolio-content h-100">
-                            <img src="assets/img/portfolio/food-app.png" class="img-fluid" alt="">
+                            <img src="assets/img/portfolio/food-app.png" class="img-fluid" alt="" width="400" height="300">
                             <div class="portfolio-info">
                                 <h4>Food Web App</h4>
                                 <p>Order Food Online</p>
                                 <a href="assets/img/portfolio/food-app.png" title="Food Web App"
                                    data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i
                                         class="bi bi-zoom-in"></i></a>
-                                <a href="portfolio-details.html" title="More Details" class="details-link"><i
+                                <a href="food-app-portfolio-details.html" title="More Details" class="details-link"><i
+                                        class="bi bi-link-45deg"></i></a>
+                            </div>
+                        </div>
+                    </div><!-- End Portfolio Item -->
+
+                    <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+                        <div class="portfolio-content h-100">
+                            <img src="assets/img/portfolio/celebrity-quiz.png" class="img-fluid" alt="" width="400" height="400">
+                            <div class="portfolio-info">
+                                <h4>Celebrity Quiz App</h4>
+                                <p>Play Quiz</p>
+                                <a href="assets/img/portfolio/celebrity-quiz.png" title="Celebrity Quiz App"
+                                   data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i
+                                        class="bi bi-zoom-in"></i></a>
+                                <a href="quiz-app-portfolio-details.html" title="More Details" class="details-link"><i
                                         class="bi bi-link-45deg"></i></a>
                             </div>
                         </div>
@@ -426,14 +441,14 @@
 
                     <div style="display:none" class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
                         <div class="portfolio-content h-100">
-                            <img src="assets/img/portfolio/product-1.jpg" class="img-fluid" alt="">
+                            <img src="assets/img/celebrity-quiz.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h4>Product 1</h4>
                                 <p>Lorem ipsum, dolor sit amet consectetur</p>
-                                <a href="assets/img/portfolio/product-1.jpg" title="Product 1"
+                                <a href="assets/img/celebrity-quiz.png" title="Product 1"
                                    data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i
                                         class="bi bi-zoom-in"></i></a>
-                                <a href="portfolio-details.html" title="More Details" class="details-link"><i
+                                <a href="food-app-portfolio-details.html" title="More Details" class="details-link"><i
                                         class="bi bi-link-45deg"></i></a>
                             </div>
                         </div>
@@ -448,7 +463,7 @@
                                 <a href="assets/img/portfolio/branding-1.jpg" title="Branding 1"
                                    data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i
                                         class="bi bi-zoom-in"></i></a>
-                                <a href="portfolio-details.html" title="More Details" class="details-link"><i
+                                <a href="food-app-portfolio-details.html" title="More Details" class="details-link"><i
                                         class="bi bi-link-45deg"></i></a>
                             </div>
                         </div>
@@ -463,7 +478,7 @@
                                 <a href="assets/img/portfolio/books-1.jpg" title="Branding 1"
                                    data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i
                                         class="bi bi-zoom-in"></i></a>
-                                <a href="portfolio-details.html" title="More Details" class="details-link"><i
+                                <a href="food-app-portfolio-details.html" title="More Details" class="details-link"><i
                                         class="bi bi-link-45deg"></i></a>
                             </div>
                         </div>
