--- a/index.html
+++ b/index.html
@@ -439,46 +439,16 @@
                         </div>
                     </div><!-- End Portfolio Item -->
 
-                    <div style="display:none" class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+                    <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
                         <div class="portfolio-content h-100">
-                            <img src="assets/img/celebrity-quiz.png" class="img-fluid" alt="">
+                            <img src="assets/img/portfolio/project-manager-app.png" class="img-fluid" alt="" width="400" height="400">
                             <div class="portfolio-info">
-                                <h4>Product 1</h4>
-                                <p>Lorem ipsum, dolor sit amet consectetur</p>
-                                <a href="assets/img/celebrity-quiz.png" title="Product 1"
-                                   data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i
+                                <h4>Project Manager App</h4>
+                                <p>Manage Projects</p>
+                                <a href="assets/img/portfolio/project-manager-app.png" title="Project Manager App"
+                                   data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i
                                         class="bi bi-zoom-in"></i></a>
-                                <a href="food-app-portfolio-details.html" title="More Details" class="details-link"><i
-                                        class="bi bi-link-45deg"></i></a>
-                            </div>
-                        </div>
-                    </div><!-- End Portfolio Item -->
-
-                    <div style="display:none" class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-                        <div class="portfolio-content h-100">
-                            <img src="assets/img/portfolio/branding-1.jpg" class="img-fluid" alt="">
-                            <div class="portfolio-info">
-                                <h4>Branding 1</h4>
-                                <p>Lorem ipsum, dolor sit amet consectetur</p>
-                                <a href="assets/img/portfolio/branding-1.jpg" title="Branding 1"
-                                   data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i
-                                        class="bi bi-zoom-in"></i></a>
-                                <a href="food-app-portfolio-details.html" title="More Details" class="details-link"><i
-                                        class="bi bi-link-45deg"></i></a>
-                            </div>
-                        </div>
-                    </div><!-- End Portfolio Item -->
-
-                    <div style="display:none" class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
-                        <div class="portfolio-content h-100">
-                            <img src="assets/img/portfolio/books-1.jpg" class="img-fluid" alt="">
-                            <div class="portfolio-info">
-                                <h4>Books 1</h4>
-                                <p>Lorem ipsum, dolor sit amet consectetur</p>
-                                <a href="assets/img/portfolio/books-1.jpg" title="Branding 1"
-                                   data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i
-                                        class="bi bi-zoom-in"></i></a>
-                                <a href="food-app-portfolio-details.html" title="More Details" class="details-link"><i
+                                <a href="project-manager-app-portfolio-details.html" title="More Details" class="details-link"><i
                                         class="bi bi-link-45deg"></i></a>
                             </div>
                         </div>
