--- a/project-manager-app-portfolio-details.html
+++ b/project-manager-app-portfolio-details.html
@@ -110,6 +110,7 @@
               </script>
 
               <div class="swiper-wrapper align-items-center">
+
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/project-manager-app.png" alt="">
                 </div>
@@ -134,12 +135,12 @@
                 <li><strong>Category</strong>: Web design</li>
                 <li><strong>Client</strong>: Demo</li>
                 <li><strong>Project date</strong>: 20 July, 2024</li>
-                <li><strong>Project URL</strong>: <a href="https://jugalsahu10.github.io/quiz-webapp">jugalsahu10.github.io/quiz-webapp</a></li>
+                <li><strong>Project URL</strong>: <a href="https://jugalsahu10.github.io/project-manager">jugalsahu10.github.io/project-manager</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Celebrity Quiz App</h2>
-              <p>Quiz App throws questions with 4 options available, with limited time to answer, showing you if you answered correctly. And finally result of your quiz.</p>
+              <h2>Project Manager</h2>
+              <p>Manager your projects</p>
             </div>
           </div>
 
