--- a/index.html
+++ b/index.html
@@ -411,6 +411,36 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
                         <div class="portfolio-content h-100">
+                            <img src="assets/img/portfolio/blackbuck/blackbuck-01.png" class="img-fluid" alt="" width="400" height="400">
+                            <div class="portfolio-info">
+                                <h4>Blackbuck</h4>
+                                <p>INDIA’S LARGEST DIGITAL TRUCKING PLATFORM</p>
+                                <a href="assets/img/portfolio/blackbuck/blackbuck-01.png" title="Blackbuck"
+                                   data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i
+                                        class="bi bi-zoom-in"></i></a>
+                                <a href="blackbuck-portfolio-details.html" title="More Details" class="details-link"><i
+                                        class="bi bi-link-45deg"></i></a>
+                            </div>
+                        </div>
+                    </div><!-- End Portfolio Item -->
+
+                    <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+                        <div class="portfolio-content h-100">
+                            <img src="assets/img/portfolio/medhost/medhost-01.png" class="img-fluid" alt="" width="400" height="400">
+                            <div class="portfolio-info">
+                                <h4>Medhost</h4>
+                                <p>Electronic Health Record (EHR)</p>
+                                <a href="assets/img/portfolio/medhost/medhost-01.png" title="Medhost"
+                                   data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i
+                                        class="bi bi-zoom-in"></i></a>
+                                <a href="medhost-portfolio-details.html" title="More Details" class="details-link"><i
+                                        class="bi bi-link-45deg"></i></a>
+                            </div>
+                        </div>
+                    </div><!-- End Portfolio Item -->
+
+                    <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+                        <div class="portfolio-content h-100">
                             <img src="assets/img/portfolio/food-app.png" class="img-fluid" alt="" width="400" height="300">
                             <div class="portfolio-info">
                                 <h4>Food Web App</h4>
