--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                                 <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong>
                                     <span>jugalsahu10.github.io</span></li>
                                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong>
-                                    <span>+123 456 7890</span></li>
+                                    <span>+91-9407490863</span></li>
                                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong>
                                     <span>Jabalpur, MP, India</span></li>
                             </ul>
